--- a/src/main/resources/grupo9/proyectogrupo9/MenuInicio.fxml
+++ b/src/main/resources/grupo9/proyectogrupo9/MenuInicio.fxml
@@ -19,7 +19,7 @@
       <TextField fx:id="usuario" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Clave" />
       <TextField fx:id="clave" />
-      <Button fx:id="btnIniciar" onAction="#IniciarSesion" text="Iniciar sesión" />
+      <Button onAction="#comprobarUsuario" text="Iniciar sesión" />
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
